--- a/vanilla-typeahead/index.html
+++ b/vanilla-typeahead/index.html
@@ -84,6 +84,22 @@
 </body>
 
 <script>
+
+    let characters = [];
+    let list = document.getElementById('list')
+
+
+    fetch('https://www.swapi.co/api/people')
+    .then(response => response.json())
+    .then(response => {characters.push(...response.results); 
+    render ();
+    })
+    
+    function render(){
+    let html = characters.map(val => `<li>${val.name}</li>` ).join('')
+
+    list.innerHTML = html;
+}
 </script>
 
 </html>
